[gd_scene load_steps=7 format=3 uid="uid://llhlj4xdimsw"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_y5v3v"]
[ext_resource type="Texture2D" uid="uid://byv1dw25bx231" path="res://backgrounds/christmas_tree.jpg" id="2_nwbm2"]
[ext_resource type="Texture2D" uid="uid://jautd1th120v" path="res://ui/winter_button_play.png" id="3_vitcw"]
[ext_resource type="Texture2D" uid="uid://chwdn2lbyv4k6" path="res://ui/winter_button_load.png" id="4_08266"]
[ext_resource type="Texture2D" uid="uid://dw7jm4xj8hbe" path="res://ui/winter_button_exit.png" id="5_g8eol"]
[ext_resource type="AudioStream" uid="uid://knto1fh4opug" path="res://audio/menu_button_hover.mp3" id="6_3x22s"]

[node name="GameMenu" type="Node2D"]
script = ExtResource("1_y5v3v")

[node name="christmas_background" type="Sprite2D" parent="."]
position = Vector2(964, 536.25)
scale = Vector2(2.13778, 1.92451)
texture = ExtResource("2_nwbm2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -275.5
offset_right = 215.0
offset_bottom = 275.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Play" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_vitcw")

[node name="Load" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_08266")

[node name="Exit" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_g8eol")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="CanvasLayer/MarginContainer"]
stream = ExtResource("6_3x22s")

[connection signal="gui_input" from="CanvasLayer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/MarginContainer/VBoxContainer/Load" to="." method="_on_load_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/Load" to="." method="_on_load_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/Load" to="." method="_on_load_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_exited"]
